[gd_scene load_steps=7 format=2]

[ext_resource path="res://Globo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mundo.gd" type="Script" id=2]
[ext_resource path="res://Alien.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://cityskyline.png" type="Texture" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2.91998, 598.5, 0, 0, 0, 0, 676.738, 600.619 )
}

[node name="Mundo" type="Node"]
script = ExtResource( 2 )
globo_escena = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1045.0
margin_bottom = 597.0
rect_scale = Vector2( 0.534508, 0.556895 )
texture = ExtResource( 5 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlobosCamino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="GloboSpawn" type="PathFollow2D" parent="GlobosCamino"]
position = Vector2( 2.91998, 598.5 )
rotation = 0.00313433

[node name="GloboTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Alien" parent="." instance=ExtResource( 3 )]
position = Vector2( 883.674, 301.471 )

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 884.5, 300.82 )

[connection signal="timeout" from="GloboTimer" to="." method="_on_GloboTimer_timeout"]
[connection signal="death" from="Alien" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
